// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar Project render flows sidebar with root 1`] = `
<Fragment>
  <div
    className="search-section"
  >
    <ButtonGroup
      className="toggle-group w-100"
      role="group"
      tag="div"
    >
      <Button
        color="secondary"
        disabled={true}
        key="structure"
        onClick={[Function]}
        outline={false}
        tag="button"
      >
        structure
      </Button>
      <Button
        color="secondary"
        disabled={false}
        key="flows"
        onClick={[Function]}
        outline={true}
        tag="button"
      >
        flows
      </Button>
    </ButtonGroup>
  </div>
  <label
    className="search-section section-title mt-3"
  >
    Project Flows
  </label>
  <hr
    className="mb-2 mt-4"
  />
  <label
    className="search-section section-title mt-3"
  >
    Other Flows
  </label>
  <ConnectFunction
    copyFlow={[Function]}
    deleteFlow={[Function]}
    flow={
      Object {
        "id": "1",
        "name": "ROOT",
        "sub_diagrams": Array [],
      }
    }
    key="1"
  />
</Fragment>
`;

exports[`SideBar Project render flows with sub diagrams 1`] = `
<Fragment>
  <div
    className="search-section"
  >
    <ButtonGroup
      className="toggle-group w-100"
      role="group"
      tag="div"
    >
      <Button
        color="secondary"
        disabled={true}
        key="structure"
        onClick={[Function]}
        outline={false}
        tag="button"
      >
        structure
      </Button>
      <Button
        color="secondary"
        disabled={false}
        key="flows"
        onClick={[Function]}
        outline={true}
        tag="button"
      >
        flows
      </Button>
    </ButtonGroup>
  </div>
  <label
    className="search-section section-title mt-3"
  >
    Project Flows
  </label>
  <hr
    className="mb-2 mt-4"
  />
  <label
    className="search-section section-title mt-3"
  >
    Other Flows
  </label>
  <ConnectFunction
    copyFlow={[Function]}
    deleteFlow={[Function]}
    flow={
      Object {
        "id": "1",
        "name": "ROOT",
        "sub_diagrams": Array [
          "2",
        ],
      }
    }
    key="1"
  />
  <ConnectFunction
    copyFlow={[Function]}
    deleteFlow={[Function]}
    flow={
      Object {
        "id": "2",
        "name": "TEST",
        "sub_diagrams": Array [],
      }
    }
    key="2"
  />
</Fragment>
`;
